<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical" >

    <RelativeLayout
        android:id="@+id/eczanetopbar"
        android:layout_width="fill_parent"
        android:layout_height="60dip"
        android:layout_marginBottom="60dip"
        android:background="@drawable/threedtopbar" >

        <ImageButton
            android:id="@+id/oturumhomebutton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:layout_marginBottom="5dip"
            android:layout_marginLeft="5dip"
            android:layout_marginTop="10dip"
            android:background="@android:color/transparent"
            android:src="@drawable/back" />

        <TextView
            android:id="@+id/dayText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:layout_marginTop="10dip"
            android:background="@android:color/transparent"
            android:text="@string/detail"
            android:textColor="@android:color/white"
            android:textSize="25sp"
            android:textStyle="bold" />
    </RelativeLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/date"
        android:textSize="20sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/oturumtarihi"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:layout_marginBottom="20dip"
        android:textColor="@android:color/white"
        android:textSize="16sp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/speaker"
        android:textSize="20sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/speaker"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:layout_marginBottom="20dip"
        android:textColor="@android:color/white"
        android:textSize="16sp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="@string/subject"
        android:textSize="20sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/subject"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:textColor="@android:color/white"
        android:textSize="16sp" />

</LinearLayout>