<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    android:orientation="vertical" >
    
    <RelativeLayout
        android:id="@+id/eczanetopbar"
        android:layout_width="fill_parent"
        android:layout_height="60dip"
        android:background="@drawable/threedtopbar" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:layout_marginTop="10dip"
            android:background="@android:color/transparent"
            android:textColor="@android:color/white"
            android:textSize="25sp"
            android:textStyle="bold"
            android:text="@string/sponsors"
            android:id="@+id/dayText" />

    </RelativeLayout>

    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="fill_parent" >

        <TableLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content" >


            <TableRow
                android:layout_width="fill_parent"
                android:layout_height="wrap_content" >

                <LinearLayout
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical" >

                    <TextView
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/gold"
                        android:textSize="16sp"
                        android:textStyle="bold" />

                    <ImageView
                        android:layout_width="300dip"
                        android:layout_height="300dip"
                        android:src="@drawable/peakgames" />
                </LinearLayout>
            </TableRow>

            <TableRow
                android:layout_width="fill_parent"
                android:layout_height="wrap_content" >
                 <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:gravity="center_horizontal" >

                <TextView
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/silver"
                    android:textSize="16sp"
                    android:textStyle="bold" />

                <ImageView
                    android:layout_width="200dip"
                    android:layout_height="200dip"
                    android:src="@drawable/gumus_sponsor" />
                </LinearLayout>
            </TableRow>

            <TableRow
                android:layout_width="fill_parent"
                android:layout_height="wrap_content" >
                 <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:gravity="center_horizontal" >

                <TextView
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/support"
                    android:textSize="16sp"
                    android:textStyle="bold" />

                <ImageView
                    android:layout_width="200dip"
                    android:layout_height="200dip"
                    android:src="@drawable/destek_sponsor" />
                </LinearLayout>
            </TableRow>

            <TableRow
                android:layout_width="fill_parent"
                android:layout_height="wrap_content" >
                 <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:gravity="center_horizontal" >

                <TextView
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/basin"
                    android:textSize="16sp"
                    android:textStyle="bold" />

                <ImageView
                    android:layout_width="200dip"
                    android:layout_height="200dip"
                    android:src="@drawable/basin_sponsoru"
                    android:layout_marginBottom="20dip" />
                <ImageView
                    android:layout_width="200dip"
                    android:layout_height="200dip"
                    android:src="@drawable/gazete_bilkent" />
                </LinearLayout>
            </TableRow>
            <TableRow
                android:layout_width="fill_parent"
                android:layout_height="wrap_content" >
                 <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:gravity="center_horizontal" >

                <TextView
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/drink"
                    android:textSize="16sp"
                    android:textStyle="bold" />

                <ImageView
                    android:layout_width="200dip"
                    android:layout_height="200dip"
                    android:src="@drawable/red_bull" />
                </LinearLayout>
            </TableRow>

            <TableRow
                android:layout_width="fill_parent"
                android:layout_height="wrap_content" >
                 <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:gravity="center_horizontal" >

                <TextView
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/help"
                    android:textSize="16sp"
                    android:textStyle="bold" />

                <ImageView
                    android:layout_width="200dip"
                    android:layout_height="200dip"
                    android:src="@drawable/destek_cyberpark"
                    android:layout_marginBottom="20dip" />
                <ImageView
                    android:layout_width="200dip"
                    android:layout_height="200dip"
                    android:src="@drawable/destek_gdg" />
                </LinearLayout>
            </TableRow>
        </TableLayout>
    </ScrollView>

</LinearLayout>